# DistributedSystemsITMO

./: README.md
Lab1/: CMakeLists.txt  io.h  ipc.c  main.c
Lab1/PaxHeaders.7274/: pa1_starter_code
Lab1/pa1/: io.h  ipc.c
Lab1/pa1_starter_code/PaxHeaders.7274/: .version  common.h  ipc.h  pa1.h
Lab2/: CMakeLists.txt  io.h  ipc.c  main  main.c  pa23.c
Lab2/pa2/: CMakeLists.txt  io.h  ipc.c  main.c
Lab3/: 123.c  CMakeLists.txt  io.h  ipc.c  main.c
Lab3/pa3/: ipc.c
Lab4/: CMakeLists.txt  clock.c  io.h  ipc.c  lamport.c  lamport.h  main  main.c
Lab5/: CMakeLists.txt  io.h  ipc.c  main.c
